# vedetta-hass-integration

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  hacs.json  pyproject.toml  vership.toml
custom_components/vedetta/: __init__.py  api.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  event.py  http.py  image.py  manifest.json  media_source.py  services.yaml
custom_components/vedetta/translations/: en.json
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_camera.py  test_coordinator.py  test_event.py  test_image.py  test_media_source.py
